@@ -19,6 +19,7 @@ func genSetupCmd(name, idxPrefix, version string, beatCreator beat.Creator) *cob
  * Index mapping template in Elasticsearch to ensure fields are mapped.
  * Kibana dashboards (where available).
  * ML jobs (where available).
+ * Ingest pipelines (where available).
 `,
 		Run: func(cmd *cobra.Command, args []string) {
 			beat, err := instance.NewBeat(name, idxPrefix, version)
@@ -30,15 +31,16 @@ func genSetupCmd(name, idxPrefix, version string, beatCreator beat.Creator) *cob
 			template, _ := cmd.Flags().GetBool("template")
 			dashboards, _ := cmd.Flags().GetBool("dashboards")
 			machineLearning, _ := cmd.Flags().GetBool("machine-learning")
+			pipelines, _ := cmd.Flags().GetBool("pipelines")
 
 			// No flags: setup all
-			if !template && !dashboards && !machineLearning {
+			if !template && !dashboards && !machineLearning && !pipelines {
 				template = true
 				dashboards = true
 				machineLearning = true
 			}
 
-			if err = beat.Setup(beatCreator, template, dashboards, machineLearning); err != nil {
+			if err = beat.Setup(beatCreator, template, dashboards, machineLearning, pipelines); err != nil {
 				os.Exit(1)
 			}
 		},
@@ -47,6 +49,7 @@ func genSetupCmd(name, idxPrefix, version string, beatCreator beat.Creator) *cob
 	setup.Flags().Bool("template", false, "Setup index template only")
 	setup.Flags().Bool("dashboards", false, "Setup dashboards only")
 	setup.Flags().Bool("machine-learning", false, "Setup machine learning job configurations only")
+	setup.Flags().Bool("pipelines", false, "Setup Ingest pipelines only")
 
 	return &setup
 }
